library/pod-security-policy/fsgroup/samples/psp-fsgroup/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: fsgroup
tests:
  - name: fsgroup
    template: template.yaml
    constraint: samples/psp-fsgroup/constraint.yaml
